<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculadorFinanciero</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Agregar</string>
    <string name="title_activity_movimiento">Movimiento</string>
    <string name="nombre">Nombre</string>
    <string name="fecha">Fecha</string>
    <string name="cantidad">Cantidad</string>
    <string name="gasto">Gasto</string>
    <string name="ingreso">Ingreso</string>
    <string name="guardar">Guardar</string>
    <string name="cuenta">Cuenta</string>
    <string name="Categoria">Categoría</string>
    <string name="title_activity_mis_gastos">Mis gastos</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Movimientos</string>
    <string name="title_section2">Categorías</string>
    <string name="title_section3">Cuentas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cuenta">Cuenta</string>
    <string name="rojo">Rojo</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="color">Color</string>
    <string name="saldo">Saldo</string>
    <string name="title_activity_categoria">Categoria</string>

</resources>
